2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace for-loop with while-loop.

	text[i] iteration has irregular increments, as decrements
	before continue appear in many places. This indicates
	improper use of for-loop.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Replace for-loop with while-loop, and increment the iterator
	    as actually required.
	  - Remove unnecessary decrements.
	  - Rewrite comments and regroup source lines.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Adjust IdxSep[] and LinkSep[] settings in Thai chunk.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Replace cntFound counter with bool isWordFound.
	  - Initialize IdxSep[i] = -1 and overwrite it later,
	    instead of setting it afterward when no word is found.
	  - Always add terminating element to LinkSep[] in case
	    word is found, regardless of whether the word count is
	    below 2000. (Weird limit value.)
	  - Remove now-unnecessary LinkSep[cntLink] = -1 assignment
	    on pseudo-ending element.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify word list preparation loop within Thai chunk.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Iterate j from i to textLen instead of from 0 to (textLen - i)
	    and then simply access text[j] instead of text[i + j].
	  - Rearrange IdxSep[i] assignment and cntFound increment,
	    for more readability.
	  - Adjust LinkSep[cntLink] assignments logic to resemble those in
	    other codes.

2017-11-09  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Refactor dictionary out of AbsWordSeg.

	* src/abswordseg.h, src/abswordseg.cpp,
	  src/Makefile.am, +src/dict.h, +src/dict.cpp, -src/dictpath.h:
	  - New class Dict to wrap up Trie, with Dict::State to wrap up
	    TrieState.
	  - Move AbsWordSeg::InitDict() functionality into Dict::open().
	  - Remove AbsWordSeg::MyDict member.
	* src/abswordseg.h, src/abswordseg.cpp: