@@ -1,6 +1,7 @@
 TESTS = \
 	test-simple.sh \
 	test-long.sh \
+	test-mixed.sh \
 	test-utf8-wbr.sh \
 	test-latex.sh \
 	$(NULL)
@@ -14,12 +15,14 @@ AM_TESTS_ENVIRONMENT = \
 check_SCRIPTS = \
 	test-simple.sh \
 	test-long.sh \
+	test-mixed.sh \
 	test-utf8-wbr.sh \
 	test-latex.sh \
 	$(NULL)
 
-DISTCLEANFILES = \
+CLEANFILES = \
 	long-out.txt \
+	mixed-out.txt \
 	thai-latex-out.tex \
 	$(NULL)
 
@@ -27,6 +30,8 @@ EXTRA_DIST = \
 	$(check_SCRIPTS) \
 	long.txt \
 	long-wseg.txt \
+	mixed.txt \
+	mixed-wseg.txt \
 	thai-latex.tex \
 	thai-latex-wseg.tex \
 	$(NULL)
