@@ -1,0 +1,1 @@
+เมื่อ|วาน|นี้ (๘ พ.ย. ๒๕๖๐) การ|จัด|ประกวด|ข้าว|ดี|เด่น|โลก หรือ The World's Best Rice 2017 ครั้ง|ที่ 9 ซึ่ง|จัด|โดย|องค์กร The Rice Trader องค์กร|ให้|บริการ|ข้อมูล|ข่าวสาร|เชิง|ลึก|เกี่ยว|กับ|อุตสาหกรรม|ข้าว|โลก โดย|ข้าว|หอม|มะลิ|ไทย ๑๐๕ สามารถ|คว้า|แชมป์|ข้าว|ที่|รสชาติ|ดี|ที่สุด|ใน|โลก|มา|ครอง|อีก ๑ สมัย ขณะ|ที่|ข้าว|หอม|ของ|ประเทศ|กัมพูชา ได้|อันดับ|ที่ ๒ และ|ข้าว ST24 ของ|ประเทศ|เวียดนาม ได้|อันดับ|ที่ ๓
