@@ -1,0 +1,1 @@
+เมื่อวานนี้ (๘ พ.ย. ๒๕๖๐) การจัดประกวดข้าวดีเด่นโลก หรือ The World's Best Rice 2017 ครั้งที่ 9 ซึ่งจัดโดยองค์กร The Rice Trader องค์กรให้บริการข้อมูลข่าวสารเชิงลึกเกี่ยวกับอุตสาหกรรมข้าวโลก โดยข้าวหอมมะลิไทย ๑๐๕ สามารถคว้าแชมป์ข้าวที่รสชาติดีที่สุดในโลกมาครองอีก ๑ สมัย ขณะที่ข้าวหอมของประเทศกัมพูชา ได้อันดับที่ ๒ และข้าว ST24 ของประเทศเวียดนาม ได้อันดับที่ ๓
